# Raptor

./: CMakeLists.txt
.github/workflows/: fetch_xml.yml  main.yml
etc/: device.xml
etc/devices/gemini_compact_104x68/: gemini_openfpga.xml  gemini_vpr.xml
etc/devices/gemini_compact_10x8/: Virgo_Pin_Table.csv
etc/devices/gemini_compact_10x8/ric/: O_BUF.api.json  gbox_hp_40x2_10x8.tcl
etc/devices/gemini_compact_320x218/: gemini_vpr.xml
etc/devices/gemini_compact_62x44/: gemini_vpr.xml
etc/devices/gemini_compact_62x44/ric/: periphery.tcl  virgotc_10x8_periphery.tcl
etc/devices/gemini_compact_82x68/: gemini_vpr.xml
projects/Raptor/: private_key.rsa
projects/Raptor/include/licensecc/Raptor/: licensecc_properties.h  public_key.h
projects/encryptionKeys/: config.txt  private_key.pem  public_key.pem
src/: ignore_msgs  to_be_raptor_linx
src/de/: CMakeLists.txt
src/de/src/eng/: de
src/de/src/production/: de
tests/TestIP/axi_cdma/v1_0/: axi_cdma.tcl
tests/Testcases/and2_bitstream/: force.py  raptor.tcl  sim_runner.sh
tests/Testcases/and2_bitstream/SRC/: fabric_netlists.v  fabric_netlists.v.orig  fabric_netlists.v~
tests/Testcases/and2_bitstream/SRC/CustomModules/: QL_BRAM.v  QL_DSP.v  QL_IOFF_dti.v  QL_IOFF_tsmc.v  QL_TDP36K_dti.v  QL_TDP36K_tsmc.v  QL_XOR_MUX2_dti.v  QL_XOR_MUX2_tsmc.v  RS_CCFF_dti.v  RS_CCFF_tsmc.v  gc_ff.v  gc_ffn.v  gc_ffn_new.v  mux_2level_size28.v  muxes_synth.v  ql_dsp_dti.v  ql_dsp_tsmc.v  ql_ff.v  ql_ioff.v  ql_preio.v  ql_xor_mux2.v  rs_ccff.v  rs_ioff.v  rs_latch.v  rs_mmff.v
tests/Testcases/and2_bitstream/SRC/lb/: grid_bram.v  grid_clb.v  grid_dsp.v  grid_io_bottom.v  grid_io_left.v  grid_io_right.v  grid_io_top.v  logical_tile_bram_mode_bram_.v  logical_tile_bram_mode_default__bram_lr.v  logical_tile_bram_mode_default__bram_lr_mode_physical__bram_phy.v  (+15 more)
(+110 files in other folders)
